feat: adjustments for fact

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@
 @import "styles/headings";
 
 :root {
-	--theme-primary-color: #FFD01C;
+	--theme-primary-color: #888;
 
 	--shadow-normal: #{$shadow-normal};
 	--shadow-focus: #{$shadow-focus};
