--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,8 +1,8 @@
 // Colors
 
-$theme-primary-background: #FFD01C;
+$theme-primary-background: #888;
 $theme-primary-text: #000;
-$theme-primary-border: #D69E2E;
+$theme-primary-border: #666;
 
 $theme-base-background: #FFF;
 $theme-base-text: #000;
@@ -31,9 +31,9 @@ $theme-white-background: #FFF;
 $theme-white-text: #000;
 $theme-white-border: #CBD5E0;
 
-$theme-primary-dark-background: #D69E2E;
+$theme-primary-dark-background: #444;
 $theme-primary-dark-text: #FFF;
-$theme-primary-dark-border: #975A16;
+$theme-primary-dark-border: #333;
 
 $theme-dark-background: #2D3748;
 $theme-dark-text: #E2E8F0;
