feat: update party responses, add English translations

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@
 @import "styles/headings";
 
 :root {
-	--theme-primary-color: #888;
+	--theme-primary-color: #ddd;
 
 	--shadow-normal: #{$shadow-normal};
 	--shadow-focus: #{$shadow-focus};
